Fixed $lang array being overwritten by code viewer language.

--- a/website/content/projects/cafemenu/index.html
+++ b/website/content/projects/cafemenu/index.html
@@ -1,5 +1,5 @@
-<!-- 2: This project is part of the freeCodeCamp Responsive Web Design Course, although completely typed and commented by myself: 
-    https://www.freecodecamp.org/learn/2022/responsive-web-design/learn-basic-css-by-building-a-cafe-menu/step-1 -->
+<!-- 2: This project is part of the freeCodeCamp Responsive Web Design Course, although completely typed 
+ and commented by myself: https://www.freecodecamp.org/learn/2022/responsive-web-design/learn-basic-css-by-building-a-cafe-menu/step-1 -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
